--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: springboot-jar
-        path: target/*.jar
+        path: target/*-SNAPSHOT.jar
